--- a/blogs/index.html
+++ b/blogs/index.html
@@ -1,172 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Blogs to read</title>
-        <style>
-            body {
-                font-family: "Rubik", -apple-system, BlinkMacSystemFont,
-                    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-                    "Helvetica Neue", sans-serif;
-                font-size: 2rem;
-                padding-top: 3rem;
-                padding-bottom: 10rem;
-            }
-            .indent {
-                margin-left: 10rem;
-            }
-            .content {
-                margin-left: 10vw;
-                margin-right: 10vw;
-                padding-left: 1rem;
-                padding-right: 1rem;
-                min-width: max-content;
-            }
-            .heading {
-                text-align: center;
-            }
-            hr {
-                margin-top: 3rem;
-            }
-            a,
-            .a {
-                text-decoration: none;
-                color: #111111;
-                position: relative;
-                white-space: nowrap;
-                outline: none;
-            }
-            a::after,
-            .a::after {
-                content: "";
-                position: absolute;
-                z-index: -1;
-                top: 80%;
-                bottom: 0;
-                left: -0.05em;
-                right: -0.05em;
-                transition: top 180ms cubic-bezier(0, 0.8, 0.1, 1);
-                background-color: rgba(65, 80, 230, 0.5);
-            }
-            @media (hover: hover) {
-                a:hover::after,
-                .a:hover::after {
-                    top: 0%;
-                }
-            }
-            a.invisible::after,
-            h1 > a::after,
-            h2 > a::after,
-            h3 > a::after,
-            h4 > a::after,
-            h5 > a::after,
-            h6 > a::after {
-                display: none;
-            }
-            br {
-                display: block; /* makes it have a width */
-                content: ""; /* clears default height */
-                margin-top: 0.15rem;
-            }
-            .collapsible > input[type="checkbox"] {
-                display: none;
-            }
-            .collapsible > label {
-                cursor: pointer;
-                transition: all 0.25s ease-out;
-            }
-            .collapsible > label::before {
-                content: " ";
-                display: inline-block;
-                border-top: 0.3rem solid transparent;
-                border-bottom: 0.3rem solid transparent;
-                border-left: 0.3rem solid currentColor;
-                vertical-align: middle;
-                margin-right: 0.3rem;
-                transform: translateY(-0.1rem);
-                transition: transform 0.2s ease-out;
-            }
-            .collapsible > input:checked + label::before {
-                transform: rotate(90deg) translateX(-3px);
-            }
-            .collapsible > .collapsible-content {
-                max-height: 0px;
-                overflow: hidden;
-                transition: max-height 0.25s ease-in-out;
-            }
-            .collapsible > input:checked + label + .collapsible-content {
-                max-height: 100vh;
-            }
+  <head>
+    <title>Blogs to read</title>
+    <style>
+      body {
+        font-family: "Rubik", -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          sans-serif;
+        font-size: 2rem;
+        padding-top: 3rem;
+        padding-bottom: 10rem;
+      }
+      .indent {
+        margin-left: 10rem;
+      }
+      .content {
+        margin-left: 10vw;
+        margin-right: 10vw;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        min-width: max-content;
+      }
+      .heading {
+        text-align: center;
+      }
+      hr {
+        margin-top: 3rem;
+      }
+      a,
+      .a {
+        text-decoration: none;
+        color: #111111;
+        position: relative;
+        white-space: nowrap;
+        outline: none;
+      }
+      a::after,
+      .a::after {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        top: 80%;
+        bottom: 0;
+        left: -0.05em;
+        right: -0.05em;
+        transition: top 180ms cubic-bezier(0, 0.8, 0.1, 1);
+        background-color: rgba(65, 80, 230, 0.5);
+      }
+      @media (hover: hover) {
+        a:hover::after,
+        .a:hover::after {
+          top: 0%;
+        }
+      }
+      a.invisible::after,
+      h1 > a::after,
+      h2 > a::after,
+      h3 > a::after,
+      h4 > a::after,
+      h5 > a::after,
+      h6 > a::after {
+        display: none;
+      }
+      br {
+        display: block; /* makes it have a width */
+        content: ""; /* clears default height */
+        margin-top: 0.15rem;
+      }
+      .collapsible > input[type="checkbox"] {
+        display: none;
+      }
+      .collapsible > label {
+        cursor: pointer;
+        transition: all 0.25s ease-out;
+      }
+      .collapsible > label::before {
+        content: " ";
+        display: inline-block;
+        border-top: 0.3rem solid transparent;
+        border-bottom: 0.3rem solid transparent;
+        border-left: 0.3rem solid currentColor;
+        vertical-align: middle;
+        margin-right: 0.3rem;
+        transform: translateY(-0.1rem);
+        transition: transform 0.2s ease-out;
+      }
+      .collapsible > input:checked + label::before {
+        transform: rotate(90deg) translateX(-3px);
+      }
+      .collapsible > .collapsible-content {
+        max-height: 0px;
+        overflow: hidden;
+        transition: max-height 0.25s ease-in-out;
+      }
+      .collapsible > input:checked + label + .collapsible-content {
+        max-height: 100vh;
+      }
 
-            .proxy > img {
-                width: 1.5rem;
-                padding-left: 0.5rem;
-            }
+      .proxy > img {
+        width: 1.5rem;
+        padding-left: 0.5rem;
+      }
 
-            .proxy {
-                margin-left: 1rem;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="heading">
-            <h1>Blogs to read</h1>
-        </div>
-        <div class="content">
-            <h2>Gemini</h2>
-            <div class="indent">
-                <a href="gemini://drewdevault.com/">drewdevault</a>
-                <a href="https://drewdevault.com/" class="proxy">
-                    <img src="/external.svg" />
-                </a>
-                <br />
-                <a href="gemini://skyjake.fi/gemlog/">skyjake</a>
-                <a href="https://gmi.skyjake.fi/gemlog/" class="proxy">
-                    <img src="/external.svg" />
-                </a>
-                <br />
-                <a href="gemini://seirdy.one/">seirdy</a>
-                <a href="https://seirdy.one/" class="proxy">
-                    <img src="/external.svg" />
-                </a>
-                <br />
-                <a href="gemini://warmedal.se/~bjorn/">bjorn</a>
-                <a href="https://warmedal.se/~bjorn/" class="proxy">
-                    <img src="/external.svg" />
-                </a>
-            </div>
-            <hr />
-            <h2>HTTP</h2>
-            <div class="indent">
-                <a href="https://blog.ncase.me/">ncase</a>
-                <br />
-                <a href="https://bkastl.de/notes/">bkastl</a>
-                <br />
-                <a href="https://teuxdeux.com/blog">teuxdeux</a>
-                <br />
-                <a href="https://xkcd.com/">xkcd</a>
-                <br />
-                <a href="https://blog.cloudflare.com/">The Cloudflare Blog</a>
-                <br />
-                <a href="https://signal.org/blog/">Signal</a>
-                <br />
-                <a href="https://github.blog/">Github Blog</a>
-                <br />
-                <a href="https://www.rdegges.com/">rdegges</a>
-                <br />
-                <a href="https://waitbutwhy.com/">Wait but Why</a>
-                <br />
-                <a href="https://what-if.xkcd.com/">what-if xkcd</a>
-                <br />
-                <a href="https://engineering.atspotify.com/"
-                    >Engineering at Spotify</a
-                >
-                <br />
-                <a href="https://blog.mozilla.org/">Mozilla</a>
-                <br />
-                <a href="https://netflixtechblog.com/">Netflix TechBlog</a>
-                <br />
-                <a href="https://netzpolitik.org/">netzpolitik.org</a>
-            </div>
-        </div>
-    </body>
+      .proxy {
+        margin-left: 1rem;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="heading">
+      <h1>Blogs to read</h1>
+    </div>
+    <div class="content">
+      <h2>Gemini</h2>
+      <div class="indent">
+        <a href="gemini://drewdevault.com/">drewdevault</a>
+        <a href="https://drewdevault.com/" class="proxy">
+          <img src="/external.svg" />
+        </a>
+        <br />
+        <a href="gemini://skyjake.fi/gemlog/">skyjake</a>
+        <a href="https://gmi.skyjake.fi/gemlog/" class="proxy">
+          <img src="/external.svg" />
+        </a>
+        <br />
+        <a href="gemini://seirdy.one/">seirdy</a>
+        <a href="https://seirdy.one/" class="proxy">
+          <img src="/external.svg" />
+        </a>
+        <br />
+        <a href="gemini://warmedal.se/~bjorn/">bjorn</a>
+        <a href="https://warmedal.se/~bjorn/" class="proxy">
+          <img src="/external.svg" />
+        </a>
+      </div>
+      <hr />
+      <h2>HTTP</h2>
+      <div class="indent">
+        <a href="https://blog.ncase.me/">ncase</a>
+        <br />
+        <a href="https://bkastl.de/notes/">bkastl</a>
+        <br />
+        <a href="https://teuxdeux.com/blog">teuxdeux</a>
+        <br />
+        <a href="https://xkcd.com/">xkcd</a>
+        <br />
+        <a href="https://blog.cloudflare.com/">The Cloudflare Blog</a>
+        <br />
+        <a href="https://signal.org/blog/">Signal</a>
+        <br />
+        <a href="https://github.blog/">Github Blog</a>
+        <br />
+        <a href="https://www.rdegges.com/">rdegges</a>
+        <br />
+        <a href="https://waitbutwhy.com/">Wait but Why</a>
+        <br />
+        <a href="https://what-if.xkcd.com/">what-if xkcd</a>
+        <br />
+        <a href="https://engineering.atspotify.com/">Engineering at Spotify</a>
+        <br />
+        <a href="https://blog.mozilla.org/">Mozilla</a>
+        <br />
+        <a href="https://netflixtechblog.com/">Netflix TechBlog</a>
+        <br />
+        <a href="https://netzpolitik.org/">netzpolitik.org</a>
+      </div>
+    </div>
+  </body>
 </html>
