--- a/journals/index.html
+++ b/journals/index.html
@@ -1,151 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Journals</title>
-        <style>
-            body{
-                font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-                font-size: 1rem;
-                padding-top: 3rem;
-                padding-bottom: 10rem;
-            }
-            .indent{
-                margin-left: 10rem;
-            }
-            .content{
-                margin-left: 10vw;
-                margin-right: 10vw;
-                padding-left: 1rem;
-                padding-right: 1rem;
-                min-width: max-content;
-            }
-            .heading{
-                text-align: center;                
-            }
-            hr {
-                margin-top: 3rem;
-            }
-            a, .a{
-                text-decoration: none;
-                color: #111111;
-                position: relative;
-                white-space: nowrap;
-                outline: none;
-            }
-            a::after, .a::after{
-                content: "";
-                position: absolute;
-                z-index: -1;
-                top: 80%;
-                bottom: 0;
-                left: -0.05em;
-                right: -0.05em;
-                transition: top 180ms cubic-bezier(0, .8, .1, 1);
-                background-color: rgba(65,80,230,0.5);
-            }
-            @media (hover: hover) {
-                a:hover::after, .a:hover::after {
-                    top: 0%;
-                }   
-            }
-            a.invisible::after, h1>a::after, h2>a::after, h3>a::after, h4>a::after, h5>a::after, h6>a::after{
-                display: none;
-            }
-            br {
-                display: block; /* makes it have a width */
-                content: ""; /* clears default height */
-                margin-top: 0.15rem;
-            }
-            .collapsible > input[type='checkbox'] {
-                display: none;
-            }
-            .collapsible > label {
-                cursor: pointer;
-                transition: all 0.25s ease-out;
-            }
-            .collapsible > label::before {
-                content: ' ';
-                display: inline-block;
-                border-top: 0.3rem solid transparent;
-                border-bottom: 0.3rem solid transparent;
-                border-left: 0.3rem solid currentColor;
-                vertical-align: middle;
-                margin-right: 0.3rem;
-                transform: translateY(-0.1rem);
-                transition: transform .2s ease-out;
-            }
-            .collapsible > input:checked + label::before {
-                transform: rotate(90deg) translateX(-3px);
-            }
-            .collapsible > .collapsible-content {
-                max-height: 0px;
-                overflow: hidden;
-                transition: max-height .25s ease-in-out;
-            }
-            .collapsible > input:checked + label  + .collapsible-content {
-                max-height: 100vh;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="heading">
-            <h1>Journals</h1>
+  <head>
+    <title>Journals</title>
+    <style>
+      body {
+        font-family: "Rubik", -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          sans-serif;
+        font-size: 1rem;
+        padding-top: 3rem;
+        padding-bottom: 10rem;
+      }
+      .indent {
+        margin-left: 10rem;
+      }
+      .content {
+        margin-left: 10vw;
+        margin-right: 10vw;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        min-width: max-content;
+      }
+      .heading {
+        text-align: center;
+      }
+      hr {
+        margin-top: 3rem;
+      }
+      a,
+      .a {
+        text-decoration: none;
+        color: #111111;
+        position: relative;
+        white-space: nowrap;
+        outline: none;
+      }
+      a::after,
+      .a::after {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        top: 80%;
+        bottom: 0;
+        left: -0.05em;
+        right: -0.05em;
+        transition: top 180ms cubic-bezier(0, 0.8, 0.1, 1);
+        background-color: rgba(65, 80, 230, 0.5);
+      }
+      @media (hover: hover) {
+        a:hover::after,
+        .a:hover::after {
+          top: 0%;
+        }
+      }
+      a.invisible::after,
+      h1 > a::after,
+      h2 > a::after,
+      h3 > a::after,
+      h4 > a::after,
+      h5 > a::after,
+      h6 > a::after {
+        display: none;
+      }
+      br {
+        display: block; /* makes it have a width */
+        content: ""; /* clears default height */
+        margin-top: 0.15rem;
+      }
+      .collapsible > input[type="checkbox"] {
+        display: none;
+      }
+      .collapsible > label {
+        cursor: pointer;
+        transition: all 0.25s ease-out;
+      }
+      .collapsible > label::before {
+        content: " ";
+        display: inline-block;
+        border-top: 0.3rem solid transparent;
+        border-bottom: 0.3rem solid transparent;
+        border-left: 0.3rem solid currentColor;
+        vertical-align: middle;
+        margin-right: 0.3rem;
+        transform: translateY(-0.1rem);
+        transition: transform 0.2s ease-out;
+      }
+      .collapsible > input:checked + label::before {
+        transform: rotate(90deg) translateX(-3px);
+      }
+      .collapsible > .collapsible-content {
+        max-height: 0px;
+        overflow: hidden;
+        transition: max-height 0.25s ease-in-out;
+      }
+      .collapsible > input:checked + label + .collapsible-content {
+        max-height: 100vh;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="heading">
+      <h1>Journals</h1>
+    </div>
+    <div class="content">
+      <h2>General</h2>
+      <div class="indent">
+        <h3>
+          <a
+            href="https://www-nature-com.emedien.ub.uni-muenchen.de/nature/volumes"
+            >Nature</a
+          >
+        </h3>
+        <div class="indent">
+          <a href="https://www.nature.com/nature/volumes">Public</a>
+          <br />
+          <a
+            href="https://www-nature-com.emedien.ub.uni-muenchen.de/nature/volumes"
+            >LMU</a
+          >
         </div>
-        <div class="content">
-            <h2>General</h2>
-                <div class="indent">
-                    <h3><a href="https://www-nature-com.emedien.ub.uni-muenchen.de/nature/volumes">Nature</a></h3>
-                        <div class="indent">
-                            <a href="https://www.nature.com/nature/volumes">Public</a>
-                            <br>
-                            <a href="https://www-nature-com.emedien.ub.uni-muenchen.de/nature/volumes">LMU</a>
-                        </div>
-                    <h3><a href="https://science-sciencemag-org.emedien.ub.uni-muenchen.de/content/by/year">Science</a></h3>
-                        <div class="indent">
-                            <a href="https://science.sciencemag.org/content/by/year">Public</a>
-                            <br>
-                            <a href="https://science-sciencemag-org.emedien.ub.uni-muenchen.de/content/by/year">LMU</a>
-                        </div>
-                    <h3><a href="https://www-pnas-org.emedien.ub.uni-muenchen.de/content/by/year">PNAS</a></h3>
-                        <div class="indent">
-                            <a href="https://www.pnas.org/content/by/year">Public</a>
-                            <br>
-                            <a href="https://www-pnas-org.emedien.ub.uni-muenchen.de/content/by/year">LMU</a>
-                        </div>
-                </div>
-            <h2>Physics</h2>
-                <div class="indent">
-                     <h3><a href="https://journals-aps-org.emedien.ub.uni-muenchen.de/rmp/">Reviews of Modern Physics</a></h3>
-                        <div class="indent">
-                            <a href="https://journals.aps.org/rmp/">Public</a>
-                            <br>
-                            <a href="https://journals-aps-org.emedien.ub.uni-muenchen.de/rmp/">LMU</a>
-                        </div>
-                    <h3><a href="https://www-nature-com.emedien.ub.uni-muenchen.de/nphys/volumes">Nature Physics</a></h3>
-                        <div class="indent">
-                            <a href="https://www.nature.com/nphys/volumes">Public</a>
-                            <br>
-                            <a href="https://www-nature-com.emedien.ub.uni-muenchen.de/nphys/volumes">LMU</a>
-                        </div>
-                    <h3><a href="https://www-journals-elsevier-com.emedien.ub.uni-muenchen.de/physics-reports/recent-articles">Physics Reports</a></h3>
-                        <div class="indent">
-                            <a href="https://www.journals.elsevier.com/physics-reports/recent-articles">Public</a>
-                            <br>
-                            <a href="https://www-journals-elsevier-com.emedien.ub.uni-muenchen.de/physics-reports/recent-articles">LMU</a>
-                        </div>
-                     <h3><a href="https://advances-sciencemag-org.emedien.ub.uni-muenchen.de/">Science Advances</a></h3>
-                        <div class="indent">
-                            <a href="https://advances.sciencemag.org/">Public</a>
-                            <br>
-                            <a href="https://advances-sciencemag-org.emedien.ub.uni-muenchen.de/">LMU</a>
-                        </div>
-                    <h3><a href="https://www-nature-com.emedien.ub.uni-muenchen.de/subjects/physical-sciences/ncomms">Nature Communications</a></h3>
-                        <div class="indent">
-                            <a href="https://www.nature.com/subjects/physical-sciences/ncomms">Public</a>
-                            <br>
-                            <a href="https://www-nature-com.emedien.ub.uni-muenchen.de/subjects/physical-sciences/ncomms">LMU</a>
-                        </div>
-                </div>
+        <h3>
+          <a
+            href="https://science-sciencemag-org.emedien.ub.uni-muenchen.de/content/by/year"
+            >Science</a
+          >
+        </h3>
+        <div class="indent">
+          <a href="https://science.sciencemag.org/content/by/year">Public</a>
+          <br />
+          <a
+            href="https://science-sciencemag-org.emedien.ub.uni-muenchen.de/content/by/year"
+            >LMU</a
+          >
         </div>
-    </body>
+        <h3>
+          <a
+            href="https://www-pnas-org.emedien.ub.uni-muenchen.de/content/by/year"
+            >PNAS</a
+          >
+        </h3>
+        <div class="indent">
+          <a href="https://www.pnas.org/content/by/year">Public</a>
+          <br />
+          <a
+            href="https://www-pnas-org.emedien.ub.uni-muenchen.de/content/by/year"
+            >LMU</a
+          >
+        </div>
+      </div>
+      <h2>Physics</h2>
+      <div class="indent">
+        <h3>
+          <a href="https://journals-aps-org.emedien.ub.uni-muenchen.de/rmp/"
+            >Reviews of Modern Physics</a
+          >
+        </h3>
+        <div class="indent">
+          <a href="https://journals.aps.org/rmp/">Public</a>
+          <br />
+          <a href="https://journals-aps-org.emedien.ub.uni-muenchen.de/rmp/"
+            >LMU</a
+          >
+        </div>
+        <h3>
+          <a
+            href="https://www-nature-com.emedien.ub.uni-muenchen.de/nphys/volumes"
+            >Nature Physics</a
+          >
+        </h3>
+        <div class="indent">
+          <a href="https://www.nature.com/nphys/volumes">Public</a>
+          <br />
+          <a
+            href="https://www-nature-com.emedien.ub.uni-muenchen.de/nphys/volumes"
+            >LMU</a
+          >
+        </div>
+        <h3>
+          <a
+            href="https://www-journals-elsevier-com.emedien.ub.uni-muenchen.de/physics-reports/recent-articles"
+            >Physics Reports</a
+          >
+        </h3>
+        <div class="indent">
+          <a
+            href="https://www.journals.elsevier.com/physics-reports/recent-articles"
+            >Public</a
+          >
+          <br />
+          <a
+            href="https://www-journals-elsevier-com.emedien.ub.uni-muenchen.de/physics-reports/recent-articles"
+            >LMU</a
+          >
+        </div>
+        <h3>
+          <a href="https://advances-sciencemag-org.emedien.ub.uni-muenchen.de/"
+            >Science Advances</a
+          >
+        </h3>
+        <div class="indent">
+          <a href="https://advances.sciencemag.org/">Public</a>
+          <br />
+          <a href="https://advances-sciencemag-org.emedien.ub.uni-muenchen.de/"
+            >LMU</a
+          >
+        </div>
+        <h3>
+          <a
+            href="https://www-nature-com.emedien.ub.uni-muenchen.de/subjects/physical-sciences/ncomms"
+            >Nature Communications</a
+          >
+        </h3>
+        <div class="indent">
+          <a href="https://www.nature.com/subjects/physical-sciences/ncomms"
+            >Public</a
+          >
+          <br />
+          <a
+            href="https://www-nature-com.emedien.ub.uni-muenchen.de/subjects/physical-sciences/ncomms"
+            >LMU</a
+          >
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
