--- a/me.html
+++ b/me.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="de-de">
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>Weiterleitung&hellip;</title>
-  <link rel="canonical" href="https://patrickhaussmann.de/">
-  <script>location="https://patrickhaussmann.de/"</script>
-  <meta http-equiv="refresh" content="0; url=https://patrickhaussmann.de/">
-  <meta name="robots" content="noindex">
+  <link rel="canonical" href="https://patrickhaussmann.de/" />
+  <script>
+    location = "https://patrickhaussmann.de/";
+  </script>
+  <meta http-equiv="refresh" content="0; url=https://patrickhaussmann.de/" />
+  <meta name="robots" content="noindex" />
   <h1>Weiterleitung&hellip;</h1>
-  <a href="https://patrickhaussmann.de/">Bitte hier drücken falls Sie nicht weitergeleitet wurden.</a>
+  <a href="https://patrickhaussmann.de/"
+    >Bitte hier drücken falls Sie nicht weitergeleitet wurden.</a
+  >
 </html>
